# midipass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: midipass.cpp
